# HLA_Sim

./: .gitignore  CMakeLists.txt  README.md
foms/: RPR_FOM_v2.0_1516-2010.xml  SoldierFOM.xml
src/: SoldierFederate.cpp  SoldierFederate.h  main.cpp
